--- a/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Data Wrangling.ipynb
@@ -1027,17 +1027,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "74423059",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.iloc[:,20:] = df1.iloc[:,20:].replace('No', 0)\n",
-    "df1.iloc[:,20:] = df1.iloc[:,20:].replace(['Yes','Ch','Up'], 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
    "id": "0d9f139e",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "bb816c75",
    "metadata": {
     "scrolled": false
@@ -1111,15 +1100,15 @@
        "      <td>1</td>\n",
        "      <td>Pediatrics-Endocrinology</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1135,15 +1124,15 @@
        "      <td>3</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1159,15 +1148,15 @@
        "      <td>2</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1183,15 +1172,15 @@
        "      <td>2</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Up</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1207,15 +1196,15 @@
        "      <td>1</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1231,15 +1220,15 @@
        "      <td>3</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1255,15 +1244,15 @@
        "      <td>4</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1279,15 +1268,15 @@
        "      <td>5</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1303,15 +1292,15 @@
        "      <td>13</td>\n",
        "      <td>missing</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1327,15 +1316,15 @@
        "      <td>12</td>\n",
        "      <td>InternalMedicine</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Steady</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Ch</td>\n",
+       "      <td>Yes</td>\n",
        "      <td>Other</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1369,40 +1358,40 @@
        "9                  3                         3                    4   \n",
        "\n",
        "   time_in_hospital         medical_specialty  ...  tolazamide  insulin  \\\n",
-       "0                 1  Pediatrics-Endocrinology  ...           0        0   \n",
-       "1                 3                   missing  ...           0        1   \n",
-       "2                 2                   missing  ...           0        0   \n",
-       "3                 2                   missing  ...           0        1   \n",
-       "4                 1                   missing  ...           0   Steady   \n",
-       "5                 3                   missing  ...           0   Steady   \n",
-       "6                 4                   missing  ...           0   Steady   \n",
-       "7                 5                   missing  ...           0        0   \n",
-       "8                13                   missing  ...           0   Steady   \n",
-       "9                12          InternalMedicine  ...           0   Steady   \n",
+       "0                 1  Pediatrics-Endocrinology  ...          No       No   \n",
+       "1                 3                   missing  ...          No       Up   \n",
+       "2                 2                   missing  ...          No       No   \n",
+       "3                 2                   missing  ...          No       Up   \n",
+       "4                 1                   missing  ...          No   Steady   \n",
+       "5                 3                   missing  ...          No   Steady   \n",
+       "6                 4                   missing  ...          No   Steady   \n",
+       "7                 5                   missing  ...          No       No   \n",
+       "8                13                   missing  ...          No   Steady   \n",
+       "9                12          InternalMedicine  ...          No   Steady   \n",
        "\n",
        "   glyburide-metformin  glipizide-metformin  glimepiride-pioglitazone  \\\n",
-       "0                    0                    0                         0   \n",
-       "1                    0                    0                         0   \n",
-       "2                    0                    0                         0   \n",
-       "3                    0                    0                         0   \n",
-       "4                    0                    0                         0   \n",
-       "5                    0                    0                         0   \n",
-       "6                    0                    0                         0   \n",
-       "7                    0                    0                         0   \n",
-       "8                    0                    0                         0   \n",
-       "9                    0                    0                         0   \n",
+       "0                   No                   No                        No   \n",
+       "1                   No                   No                        No   \n",
+       "2                   No                   No                        No   \n",
+       "3                   No                   No                        No   \n",
+       "4                   No                   No                        No   \n",
+       "5                   No                   No                        No   \n",
+       "6                   No                   No                        No   \n",
+       "7                   No                   No                        No   \n",
+       "8                   No                   No                        No   \n",
+       "9                   No                   No                        No   \n",
        "\n",
        "   metformin-rosiglitazone metformin-pioglitazone change diabetesMed  \\\n",
-       "0                        0                      0      0           0   \n",
-       "1                        0                      0      1           1   \n",
-       "2                        0                      0      0           1   \n",
-       "3                        0                      0      1           1   \n",
-       "4                        0                      0      1           1   \n",
-       "5                        0                      0      0           1   \n",
-       "6                        0                      0      1           1   \n",
-       "7                        0                      0      0           1   \n",
-       "8                        0                      0      1           1   \n",
-       "9                        0                      0      1           1   \n",
+       "0                       No                     No     No          No   \n",
+       "1                       No                     No     Ch         Yes   \n",
+       "2                       No                     No     No         Yes   \n",
+       "3                       No                     No     Ch         Yes   \n",
+       "4                       No                     No     Ch         Yes   \n",
+       "5                       No                     No     No         Yes   \n",
+       "6                       No                     No     Ch         Yes   \n",
+       "7                       No                     No     No         Yes   \n",
+       "8                       No                     No     Ch         Yes   \n",
+       "9                       No                     No     Ch         Yes   \n",
        "\n",
        "   readmitted  \n",
        "0       Other  \n",
@@ -1419,7 +1408,7 @@
        "[10 rows x 46 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "7b95c4de",
    "metadata": {},
    "outputs": [],
