--- a/15. Unsupervised Learning/15.6 Principal Components Analysis/Customer Segmentation using Clustering - K-means/Clustering Case Study - Customer Segmentation with K-Means - Tier 3.ipynb
+++ b/15. Unsupervised Learning/15.6 Principal Components Analysis/Customer Segmentation using Clustering - K-means/Clustering Case Study - Customer Segmentation with K-Means - Tier 3.ipynb
@@ -79,7 +79,16 @@
     "colab_type": "code",
     "id": "o6VegVF9ymXr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kstou\\anaconda3\\lib\\site-packages\\openpyxl\\worksheet\\_reader.py:312: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "df_offers = pd.read_excel(\"./WineKMC.xlsx\", sheet_name=0)"
    ]
@@ -135,7 +144,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>January</td>\n",
        "      <td>Malbec</td>\n",
@@ -145,7 +154,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>January</td>\n",
        "      <td>Pinot Noir</td>\n",
@@ -155,7 +164,7 @@
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>February</td>\n",
        "      <td>Espumante</td>\n",
@@ -165,7 +174,7 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>February</td>\n",
        "      <td>Champagne</td>\n",
@@ -175,7 +184,7 @@
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>February</td>\n",
        "      <td>Cabernet Sauvignon</td>\n",
@@ -234,6 +243,14 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kstou\\anaconda3\\lib\\site-packages\\openpyxl\\worksheet\\_reader.py:312: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -261,31 +278,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Smith</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Smith</td>\n",
        "      <td>24</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Johnson</td>\n",
        "      <td>17</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Johnson</td>\n",
        "      <td>24</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Johnson</td>\n",
        "      <td>26</td>\n",
        "      <td>1</td>\n",
@@ -817,7 +834,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -831,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
