--- a/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_validate\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -608,14 +608,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8854256740822263\n"
+      "0.8402788531271586 0.0012654842316573232\n"
      ]
     }
    ],
    "source": [
     "logreg = LogisticRegression()     #Default C=1.0\n",
-    "logreg.fit(X_train, y_train)\n",
-    "print(accuracy_score(logreg.predict(X_test), y_test))"
+    "logreg_cv_results = cross_validate(logreg, X_train, y_train, cv=5, scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "logreg_cv_scores = logreg_cv_results['test_score']\n",
+    "print(np.mean(logreg_cv_scores), np.std(logreg_cv_scores))"
    ]
   },
   {
@@ -628,14 +629,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8645546733747347\n"
+      "0.8321285434174606 0.000810181128554641\n"
      ]
     }
    ],
    "source": [
     "knn3 = KNeighborsClassifier(n_neighbors=3)\n",
-    "knn3.fit(X_train, y_train)\n",
-    "print(accuracy_score(knn3.predict(X_test), y_test))"
+    "knn3_cv_results = cross_validate(knn3, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "knn3_cv_scores = knn3_cv_results['test_score']\n",
+    "print(np.mean(knn3_cv_scores), np.std(knn3_cv_scores))"
    ]
   },
   {
@@ -648,14 +651,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8785865891046302\n"
+      "0.8360957220214129 0.0006341719243474624\n"
      ]
     }
    ],
    "source": [
     "knn5 = KNeighborsClassifier(n_neighbors=5)\n",
-    "knn5.fit(X_train, y_train)\n",
-    "print(accuracy_score(knn5.predict(X_test), y_test))"
+    "knn5_cv_results = cross_validate(knn5, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "knn5_cv_scores = knn5_cv_results['test_score']\n",
+    "print(np.mean(knn5_cv_scores), np.std(knn5_cv_scores))"
    ]
   },
   {
@@ -668,14 +673,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8202185362785944\n"
+      "0.8182194238667547 0.0015923103115843523\n"
      ]
     }
    ],
    "source": [
     "dtree = DecisionTreeClassifier()    #Default max_depth=None\n",
-    "dtree.fit(X_train, y_train)\n",
-    "print(accuracy_score(dtree.predict(X_test), y_test))"
+    "dtree_cv_results = cross_validate(dtree, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "dtree_cv_scores = dtree_cv_results['test_score']\n",
+    "print(np.mean(dtree_cv_scores), np.std(dtree_cv_scores))"
    ]
   },
   {
@@ -688,14 +695,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8883342504520085\n"
+      "0.8367650447037785 0.00010619024598811543\n"
      ]
     }
    ],
    "source": [
     "rfclf = RandomForestClassifier(random_state=42)    #Default n_estimators=100 and max_depth=None\n",
-    "rfclf.fit(X_train, y_train)\n",
-    "print(accuracy_score(rfclf.predict(X_test), y_test))"
+    "rfclf_cv_results = cross_validate(rfclf, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "rfclf_cv_scores = rfclf_cv_results['test_score']\n",
+    "print(np.mean(rfclf_cv_scores), np.std(rfclf_cv_scores))"
    ]
   },
   {
@@ -708,14 +717,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8593270969263422\n"
+      "0.8305078768135129 0.0019464326041995612\n"
      ]
     }
    ],
    "source": [
     "svmclf = svm.LinearSVC(random_state=42)    #Default C=1.0\n",
-    "svmclf.fit(X_train, y_train)\n",
-    "print(accuracy_score(svmclf.predict(X_test), y_test))"
+    "svm_cv_results = cross_validate(svmclf, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "svm_cv_scores = svm_cv_results['test_score']\n",
+    "print(np.mean(svm_cv_scores), np.std(svm_cv_scores))"
    ]
   },
   {
@@ -728,48 +739,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8833031994340068\n"
+      "0.839034061781024 0.00042559714327267123\n"
      ]
     }
    ],
    "source": [
     "gbc = GradientBoostingClassifier(max_features=80, learning_rate=1, random_state=42)    #Default n_estimators=100, criterion='friedman_mse', max_depth=3\n",
-    "gbc.fit(X_train, y_train)\n",
-    "print(accuracy_score(gbc.predict(X_test), y_test))"
+    "gbc_cv_results = cross_validate(gbc, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "gbc_cv_scores = gbc_cv_results['test_score']\n",
+    "print(np.mean(gbc_cv_scores), np.std(gbc_cv_scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "025f06bc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "DataFrame.dtypes for data must be int, float, bool or category.  When\ncategorical type is supplied, DMatrix parameter `enable_categorical` must\nbe set to `True`. Invalid columns:readmitted",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m train \u001b[38;5;241m=\u001b[39m \u001b[43mxgb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menable_categorical\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m test \u001b[38;5;241m=\u001b[39m xgb\u001b[38;5;241m.\u001b[39mDMatrix(X_test, enable_categorical\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m xgbooster \u001b[38;5;241m=\u001b[39m xgb\u001b[38;5;241m.\u001b[39mBooster()\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\core.py:506\u001b[0m, in \u001b[0;36m_deprecate_positional_args.<locals>.inner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    504\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, arg \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(sig\u001b[38;5;241m.\u001b[39mparameters, args):\n\u001b[0;32m    505\u001b[0m     kwargs[k] \u001b[38;5;241m=\u001b[39m arg\n\u001b[1;32m--> 506\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\core.py:627\u001b[0m, in \u001b[0;36mDMatrix.__init__\u001b[1;34m(self, data, label, weight, base_margin, missing, silent, feature_names, feature_types, nthread, group, qid, label_lower_bound, label_upper_bound, feature_weights, enable_categorical)\u001b[0m\n\u001b[0;32m    624\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m handle \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    625\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandle \u001b[38;5;241m=\u001b[39m handle\n\u001b[1;32m--> 627\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_info\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    628\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlabel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    629\u001b[0m \u001b[43m    \u001b[49m\u001b[43mweight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    630\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbase_margin\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbase_margin\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    631\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgroup\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mgroup\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    632\u001b[0m \u001b[43m    \u001b[49m\u001b[43mqid\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mqid\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    633\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlabel_lower_bound\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabel_lower_bound\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    634\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlabel_upper_bound\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlabel_upper_bound\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    635\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfeature_weights\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfeature_weights\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    636\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    638\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    639\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfeature_names \u001b[38;5;241m=\u001b[39m feature_names\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\core.py:506\u001b[0m, in \u001b[0;36m_deprecate_positional_args.<locals>.inner_f\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    504\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, arg \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(sig\u001b[38;5;241m.\u001b[39mparameters, args):\n\u001b[0;32m    505\u001b[0m     kwargs[k] \u001b[38;5;241m=\u001b[39m arg\n\u001b[1;32m--> 506\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\core.py:694\u001b[0m, in \u001b[0;36mDMatrix.set_info\u001b[1;34m(self, label, weight, base_margin, group, qid, label_lower_bound, label_upper_bound, feature_names, feature_types, feature_weights)\u001b[0m\n\u001b[0;32m    691\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m dispatch_meta_backend\n\u001b[0;32m    693\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m label \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 694\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_label\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    695\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    696\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_weight(weight)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\core.py:825\u001b[0m, in \u001b[0;36mDMatrix.set_label\u001b[1;34m(self, label)\u001b[0m\n\u001b[0;32m    817\u001b[0m \u001b[38;5;124;03m\"\"\"Set label of dmatrix\u001b[39;00m\n\u001b[0;32m    818\u001b[0m \n\u001b[0;32m    819\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    822\u001b[0m \u001b[38;5;124;03m    The label information to be set into DMatrix\u001b[39;00m\n\u001b[0;32m    823\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    824\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m dispatch_meta_backend\n\u001b[1;32m--> 825\u001b[0m \u001b[43mdispatch_meta_backend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mlabel\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfloat\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\data.py:910\u001b[0m, in \u001b[0;36mdispatch_meta_backend\u001b[1;34m(matrix, data, name, dtype)\u001b[0m\n\u001b[0;32m    908\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m    909\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _is_pandas_df(data):\n\u001b[1;32m--> 910\u001b[0m     data, _, _ \u001b[38;5;241m=\u001b[39m \u001b[43m_transform_pandas_df\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmeta\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    911\u001b[0m \u001b[43m                                      \u001b[49m\u001b[43mmeta_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    912\u001b[0m     _meta_from_numpy(data, name, dtype, handle)\n\u001b[0;32m    913\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\data.py:256\u001b[0m, in \u001b[0;36m_transform_pandas_df\u001b[1;34m(data, enable_categorical, feature_names, feature_types, meta, meta_type)\u001b[0m\n\u001b[0;32m    248\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtypes\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_sparse, is_categorical_dtype\n\u001b[0;32m    250\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mall\u001b[39m(\n\u001b[0;32m    251\u001b[0m     dtype\u001b[38;5;241m.\u001b[39mname \u001b[38;5;129;01min\u001b[39;00m _pandas_dtype_mapper\n\u001b[0;32m    252\u001b[0m     \u001b[38;5;129;01mor\u001b[39;00m is_sparse(dtype)\n\u001b[0;32m    253\u001b[0m     \u001b[38;5;129;01mor\u001b[39;00m (is_categorical_dtype(dtype) \u001b[38;5;129;01mand\u001b[39;00m enable_categorical)\n\u001b[0;32m    254\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m dtype \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mdtypes\n\u001b[0;32m    255\u001b[0m ):\n\u001b[1;32m--> 256\u001b[0m     \u001b[43m_invalid_dataframe_dtype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    258\u001b[0m \u001b[38;5;66;03m# handle feature names\u001b[39;00m\n\u001b[0;32m    259\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m feature_names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m meta \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\xgboost\\data.py:236\u001b[0m, in \u001b[0;36m_invalid_dataframe_dtype\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    231\u001b[0m         err \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    233\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mDataFrame.dtypes for data must be int, float, bool or category.  When\u001b[39m\n\u001b[0;32m    234\u001b[0m \u001b[38;5;124mcategorical type is supplied, DMatrix parameter `enable_categorical` must\u001b[39m\n\u001b[0;32m    235\u001b[0m \u001b[38;5;124mbe set to `True`.\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m \u001b[38;5;241m+\u001b[39m err\n\u001b[1;32m--> 236\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
-      "\u001b[1;31mValueError\u001b[0m: DataFrame.dtypes for data must be int, float, bool or category.  When\ncategorical type is supplied, DMatrix parameter `enable_categorical` must\nbe set to `True`. Invalid columns:readmitted"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8400447559508795 0.0005316555915480847\n"
      ]
     }
    ],
    "source": [
-    "train = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
-    "test = xgb.DMatrix(X_test, enable_categorical=True)\n",
-    "xgbooster = xgb.Booster()\n",
-    "xgbooster.train(train)\n",
-    "print(accuracy_score(xgbooster.predict(test), y_test))"
+    "xgbooster = xgb.XGBClassifier()\n",
+    "xgb_cv_results = cross_validate(xgbooster, X_train, y_train, cv=5, \n",
+    "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
+    "xgb_cv_scores = xgb_cv_results['test_score']\n",
+    "print(np.mean(xgb_cv_scores), np.std(xgb_cv_scores))"
    ]
   }
  ],
