--- a/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Pre-processing and Training Data Development.ipynb
@@ -36,7 +36,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import xgboost as xgb\n",
     "from sklearn.feature_selection import chi2\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.metrics import classification_report, accuracy_score, make_scorer\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -622,6 +622,46 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "c84bb440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_report(clf, X, y):\n",
+    "    clf = clf.fit(X, y)\n",
+    "    y_pred = clf.predict(X)\n",
+    "    y_true = y\n",
+    "    print(classification_report(y_true, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "71f3bec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.63      0.04      0.08      8508\n",
+      "       Other       0.89      1.00      0.94     67816\n",
+      "\n",
+      "    accuracy                           0.89     76324\n",
+      "   macro avg       0.76      0.52      0.51     76324\n",
+      "weighted avg       0.86      0.89      0.85     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(logreg, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "84491c8e",
    "metadata": {},
    "outputs": [
@@ -643,7 +683,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
+   "id": "3e9cf1c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.72      0.24      0.36      8508\n",
+      "       Other       0.91      0.99      0.95     67816\n",
+      "\n",
+      "    accuracy                           0.90     76324\n",
+      "   macro avg       0.82      0.61      0.65     76324\n",
+      "weighted avg       0.89      0.90      0.88     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(knn3, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "cb82c7a9",
    "metadata": {},
    "outputs": [
@@ -665,7 +731,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "id": "0f975161",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.66      0.09      0.16      8508\n",
+      "       Other       0.90      0.99      0.94     67816\n",
+      "\n",
+      "    accuracy                           0.89     76324\n",
+      "   macro avg       0.78      0.54      0.55     76324\n",
+      "weighted avg       0.87      0.89      0.86     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(knn5, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "454cd2b5",
    "metadata": {},
    "outputs": [
@@ -673,7 +765,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8182194238667547 0.0015923103115843523\n"
+      "0.8185659566436037 0.0014226651221841584\n"
      ]
     }
    ],
@@ -687,7 +779,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "id": "58cab245",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       1.00      1.00      1.00      8508\n",
+      "       Other       1.00      1.00      1.00     67816\n",
+      "\n",
+      "    accuracy                           1.00     76324\n",
+      "   macro avg       1.00      1.00      1.00     76324\n",
+      "weighted avg       1.00      1.00      1.00     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(dtree, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "637405d2",
    "metadata": {},
    "outputs": [
@@ -709,7 +827,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "id": "857983ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       1.00      1.00      1.00      8508\n",
+      "       Other       1.00      1.00      1.00     67816\n",
+      "\n",
+      "    accuracy                           1.00     76324\n",
+      "   macro avg       1.00      1.00      1.00     76324\n",
+      "weighted avg       1.00      1.00      1.00     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(rfclf, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "4882253e",
    "metadata": {},
    "outputs": [
@@ -731,7 +875,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
+   "id": "9df3f9f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.21      0.07      0.10      8508\n",
+      "       Other       0.89      0.97      0.93     67816\n",
+      "\n",
+      "    accuracy                           0.87     76324\n",
+      "   macro avg       0.55      0.52      0.52     76324\n",
+      "weighted avg       0.82      0.87      0.84     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(svmclf, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "31b163c5",
    "metadata": {},
    "outputs": [
@@ -753,7 +923,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "id": "b8f9de49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.63      0.06      0.11      8508\n",
+      "       Other       0.89      1.00      0.94     67816\n",
+      "\n",
+      "    accuracy                           0.89     76324\n",
+      "   macro avg       0.76      0.53      0.53     76324\n",
+      "weighted avg       0.86      0.89      0.85     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(gbc, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "025f06bc",
    "metadata": {},
    "outputs": [
@@ -771,6 +967,33 @@
     "                                    scoring='f1_weighted', n_jobs=-1) #'f1' producing 'nan' for all scores\n",
     "xgb_cv_scores = xgb_cv_results['test_score']\n",
     "print(np.mean(xgb_cv_scores), np.std(xgb_cv_scores))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "96eb3400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12:40:35] WARNING: ..\\src\\learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         <30       0.90      0.05      0.10      8508\n",
+      "       Other       0.89      1.00      0.94     67816\n",
+      "\n",
+      "    accuracy                           0.89     76324\n",
+      "   macro avg       0.90      0.53      0.52     76324\n",
+      "weighted avg       0.89      0.89      0.85     76324\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_report(xgbooster, X_train, y_train)"
    ]
   }
  ],
