--- a/Capstone Two/Diabetic Patient Readmission - Pre-processing, Training Data Development, and Initial Models.ipynb
+++ b/Capstone Two/Diabetic Patient Readmission - Pre-processing, Training Data Development, and Initial Models.ipynb
@@ -5,7 +5,7 @@
    "id": "9472e3f4",
    "metadata": {},
    "source": [
-    "# **Diabetic Patient Readmission -- Pre-processing and Training Data Development**\n",
+    "# **Diabetic Patient Readmission: Pre-processing, Training Data Development, and Initial Models**\n",
     "\n",
     "This dataset was analyzed by numerous Virginia Commonwealth University faculty in a recent research article which is accompanied by feature descriptions. These can be found at https://www.hindawi.com/journals/bmri/2014/781670/tab1/."
    ]
@@ -273,6 +273,14 @@
    "source": [
     "df1 = pd.read_csv('clean_data2.csv')\n",
     "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed079062",
+   "metadata": {},
+   "source": [
+    "# Pre-processing:"
    ]
   },
   {
@@ -563,6 +571,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5fd2db68",
+   "metadata": {},
+   "source": [
+    "# Train-test split:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "716c6521",
@@ -571,6 +587,14 @@
    "source": [
     "# Split the data into a training and test set.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size = 0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7573cfc5",
+   "metadata": {},
+   "source": [
+    "# Inital Models:"
    ]
   },
   {
@@ -692,7 +716,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8179600458986709 0.0017860336876575878\n"
+      "0.8181262774882108 0.0016340115059804703\n"
      ]
     }
    ],
@@ -728,6 +752,14 @@
    ],
    "source": [
     "class_report(dtree, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3e99660",
+   "metadata": {},
+   "source": [
+    "This result makes sense for a Decision Tree Classifier with no max depth."
    ]
   },
   {
@@ -906,7 +938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19:04:24] WARNING: ..\\src\\learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "[14:21:40] WARNING: ..\\src\\learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         <30       0.87      0.05      0.10      8154\n",
@@ -921,6 +953,14 @@
    ],
    "source": [
     "class_report(xgbooster, X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d7f735",
+   "metadata": {},
+   "source": [
+    "At a glance, it seems we will want to dig deeper with **xgbooster**, **Random Forest Classifier**, and **Logistic Regression**"
    ]
   }
  ],
